@@ -47,8 +47,8 @@ can skip ahead to the CMake section.
      environment. In particular, you can alter the definition of the NEWLINE
      macro to specify what character(s) you want to be interpreted as line
      terminators by default.
-
-     When you compile any of the PCRE2 modules, you must specify
+     
+     When you subsequently compile any of the PCRE2 modules, you must specify
      -DHAVE_CONFIG_H to your compiler so that src/config.h is included in the
      sources.
 
@@ -61,6 +61,11 @@ can skip ahead to the CMake section.
      configure/make world, this is handled automatically.) When upgrading to a
      new release, you are strongly advised to review src/config.h.generic
      before re-using what you had previously.
+     
+     Note also that the src/config.h.generic file is created from a config.h
+     that was generated by Autotools, which automatically includes settings of
+     a number of macros that are not actually used by PCRE2 (for example,
+     HAVE_MEMORY_H).
 
  (2) Copy or rename the file src/pcre2.h.generic as src/pcre2.h.
 
@@ -396,6 +401,6 @@ Everything in that location, source and executable, is in EBCDIC and native
 z/OS file formats. The port provides an API for LE languages such as COBOL and
 for the z/OS and z/VM versions of the Rexx languages.
 
-===========================
-Last Updated: 19 April 2018
-===========================
+==============================
+Last Updated: 14 November 2018
+==============================
